# qhhsadv

./: CMakeLists.txt  README.md  ZCreditRoll.h  dialog.cpp  dialog.h  files.cpp  files.h  graph.cpp  graph.h  main.cpp  prefs.cpp  prefs.h  qhhsadv.rc  qhhsadv_ja_JP.ts  resizablegraphicsview.h  switchbox.h  switchstyle.h  zmap.cpp  zmap.h  zobjdata.cpp  zobjdata.h  zrule.cpp  zrule.h  zsystem.cpp  zsystem.h  zsystem.ui  zuserdata.cpp  zuserdata.h  zwords.cpp  zwords.h
data/: highds.com
data/themes/: dark.qss  light.qss
installer/: setup.iss  setup.iss.in
resources/linux/: qhhsadv.desktop
scripts/: qhhsadv.sh
